# rehearsa

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  docker-compose.yml  register-stacks.sh  stack49.yml  test-volume.yml
.github/workflows/: docker.yml  release.yml
examples/: matrix.yml
examples/stress/: deep-chain.yml  unhealthy-stack.yml
internal/stress/: cycle-stack.yml  heavy-stack.yml
src/: baseline.rs  coverage.rs  daemon.rs  history.rs  lock.rs  main.rs  notify.rs  policy.rs  provider.rs  report.rs
src/docker/: clone.rs  compose.rs  inspect.rs  list.rs  mod.rs  network.rs  sandbox.rs
src/engine/: blueprint.rs  graph.rs  mod.rs  preflight.rs  stack.rs
stress/: large-stack.yml
testdata/config/: test.txt
